syntax = "proto3";

package common;

option go_package = "github.com/BullionBear/sequex/internal/model/protobuf/common";

// Common side enum used across different services
enum Side {
  SIDE_UNSPECIFIED = 0;
  SIDE_BUY = 1;
  SIDE_SELL = 2;
}

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_DESERIALIZATION_ERROR = 1;
  ERROR_CODE_SERIALIZATION_ERROR = 2;
  ERROR_CODE_INVALID_REQUEST = 3;
  ERROR_CODE_UNAUTHORIZED = 4;
  ERROR_CODE_FORBIDDEN = 5;
  ERROR_CODE_INTERNAL_SERVER_ERROR = 6;
  ERROR_CODE_NOT_FOUND = 7;
  ERROR_CODE_CONFLICT = 8;
  ERROR_CODE_BAD_REQUEST = 9;
}

// Common error response
message ErrorResponse {
  ErrorCode code = 1;
  string message = 2;
}

message ParametersRequest {
  int64 id = 1;
}

message ParametersResponse {
  int64 id = 1;
  string parameters = 2;
}

message StatusRequest {
  int64 id = 1;
}
  
message StatusResponse {
  int64 id = 1;
  repeated bytes status = 2;
}

message MetadataRequest {
  int64 id = 1;
}

message MetadataResponse {
  int64 id = 1;
  string name = 2;
  int64 created_at = 3;
  map<string, string> emit = 4;
  map<string, string> on = 5;
  map<string, string> rpc = 6;
}
